--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -1,5 +1,6 @@
 <div class="page_header d-flex mb-4">
-    <h2 class="header_title">Add New Order Type</h2>
+    <h2 class="header_title" *ngIf="orderTypeId">Update Order Type</h2>
+    <h2 class="header_title" *ngIf="!orderTypeId">Add Order Type</h2>
 </div>
 
 <form [formGroup]="form" (submit)="saveOrderType($event)">
@@ -34,7 +35,7 @@
     
         <div class="tabels_tableWrapper table-responsive mb-40" [hidden]="!form.get('enableTables').value">
             <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
-                <h3 class="mb-0 font-weight-500">Add Tables</h3>
+                <h3 class="mb-0 font-weight-500">Tables</h3>
                 <button mat-raised-button color="primary" type="button" (click)="addAnotherTable()">Add New</button>
             </div>
             <div class="table_outerWrapper">
@@ -43,7 +44,7 @@
                     <ng-container matColumnDef="action">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
                         <td mat-cell *matCellDef="let element; let i=index;"> 
-                            <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+                            <button type="button" mat-icon-button color="warn" (click)="removeTable(i)"><mat-icon>delete</mat-icon></button>
                         </td>
                     </ng-container>
             
@@ -114,8 +115,8 @@
         </div>
         
         <div class="button_wrapper">
-            <button mat-raised-button color="primary" class="mr-20">Add</button>
-            <button mat-raised-button color="warn" >Cancel</button>
+            <button mat-raised-button color="primary" class="mr-20" type="submit">{{ orderTypeId?"Update":"Add" }}</button>
+            <button mat-raised-button color="warn" type="button" >Cancel</button>
         </div>
     </div>
 </form>
