--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="page_header d-flex mb-4">
-    <h2 class="header_title">Items</h2>
+    <h2 class="header_title">Products</h2>
     <div class="ml-auto">
         <button mat-raised-button color="primary" routerLink="/admin/products/new">Add New</button>
     </div>
@@ -17,7 +17,7 @@
 
 <div class="table_outerWrapper mat-elevation-z8 mt-20">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
-        <!-- Position Column -->
+
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
@@ -31,42 +31,35 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="productno">
+        <ng-container matColumnDef="productNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Product No </th>
-            <td mat-cell *matCellDef="let element"> {{element.productno}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.productNumber}} </td>
         </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <ng-container matColumnDef="productName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Product Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-            <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="tax">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Tax </th>
-            <td mat-cell *matCellDef="let element"> {{element.tax}} </td>
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Branch </th>
-            <td mat-cell *matCellDef="let element"> {{element.branch}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
+            <td mat-cell *matCellDef="let element"> {{ element.branch.branchTitle }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="isActive">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> is Active? </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllProducts($event.pageIndex+1)"></mat-paginator>
 </div>
