--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -2,144 +2,142 @@
     <h2 class="header_title">Add New Product</h2>
 </div>
 
-<div class="add_formWrapper">
-    <div class="row">
-        <div class="col-sm-auto">
-            <div class="product_imrBox">
-                <input type="file" name="" id="prodctImg">
-                <label for="prodctImg" title="Change Image"></label>
-            </div>
-        </div>
-        <div class="col-lg col-md col-sm col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
-                <mat-label>Product Number</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="w-100 pb-0">
-                <mat-label>Description</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="w-100 pb-0">
-                <mat-label>Tax</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-        <div class="col-lg col-md-6 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 prduct_formControl pb-0">
-                <mat-label>Title</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="w-100 prduct_formControl pb-0">
-                <mat-label>Categories</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-        <div class="col-xl col-lg-12 col-md-6 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 prduct_formControl pb-0">
-                <mat-label>Branch</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-            <mat-form-field appearance="outline" class="w-100 prduct_formControl pb-0">
-                <mat-label>Price</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-    </div>
-
-    <div class="d-flex align-items-center my-20">
-        <p class="my-0 mr-20">Enable Order type based pricing</p>
-        <mat-slide-toggle></mat-slide-toggle>
-    </div>
-
-    <div class="tabels_tableWrapper mb-40">
-        <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
-            <h3 class="mb-0 font-weight-500">Order type based pricing</h3>
-            <button mat-raised-button color="primary" (click)="openDialog()">Add New</button>
-        </div>
-        <div class="table_outerWrapper">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
-                <!-- Position Column -->
-                <ng-container matColumnDef="action">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
-                    <td mat-cell *matCellDef="let element"> 
-                        <button mat-icon-button><mat-icon>delete</mat-icon></button>
-                        <!-- <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                            <mat-icon>more_vert</mat-icon>
-                        </button>
-                            <mat-menu #moreOption="matMenu" yPosition="above">
-                            <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                            <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
-                        </mat-menu> -->
-                    </td>
-                </ng-container>
-        
-                <!-- Name Column -->
-                <ng-container matColumnDef="ordertype">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200">Order Type</th>
-                    <td mat-cell *matCellDef="let element"> {{element.ordertype}} </td>
-                </ng-container>
-        
-                <!-- Weight Column -->
-                <ng-container matColumnDef="price">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="input-group mb-0 number_input">
-                            <div class="input-group-prepend">
-                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">-</button>
-                            </div>
-                            <input type="text" class="form-control">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon1">+</button>
-                              </div>
-                          </div>
-                    </td>
-                </ng-container>
-        
-                <!-- Weight Column -->
-                <ng-container matColumnDef="tax">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Tax</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="input-group mb-0 number_input">
-                            <div class="input-group-prepend">
-                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">-</button>
-                            </div>
-                            <input type="text" class="form-control">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon1">+</button>
-                              </div>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-    </div>
-
-    <div class="row align-items-center flex-wrap mb-15">
-        <div class="col-auto">
-            <mat-form-field appearance="outline" class="w-150 pb-0">
-                <mat-label>Parking Charges</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-        <div class="col-auto">
-            <div class="d-flex align-items-center my-10">
-                <p class="my-0 mr-20">Veg Only</p>
-                <mat-slide-toggle></mat-slide-toggle>
-            </div>
-        </div>
-        <div class="col-auto">
-            <div class="d-flex align-items-center my-10">
-                <p class="my-0 mr-20">Disabel for now</p>
-                <mat-slide-toggle></mat-slide-toggle>
-            </div>
-        </div>
-    </div>
+<form [formGroup]="form">
     
-    <div class="button_wrapper">
-        <button mat-raised-button color="primary" (click)="openSnackBar()" class="mr-20">Add</button>
-        <button mat-raised-button color="warn">Cancel</button>
+    <div class="add_formWrapper">
+        <div class="row">
+            <div class="col-sm-auto">
+                <div class="product_imrBox">
+                    <input type="file" name="" id="prodctImg">
+                    <label for="prodctImg" title="Change Image"></label>
+                </div>
+            </div>
+            <div class="col-sm 12 col-md">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row no-gutters flex-nowrap">
+                            <div class="col-2">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>No.</mat-label>
+                                    <input matInput formControlName="productNumber" type="text">
+                                </mat-form-field>
+                            </div>
+                            <div class="col">
+                                <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>Product Name</mat-label>
+                                    <input matInput type="text">
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6">
+                        <mat-form-field appearance="outline" class="w-100">
+                            <mat-label>Categories</mat-label>
+                            <input matInput type="text">
+                        </mat-form-field>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <mat-form-field appearance="outline" class="w-100">
+                            <mat-label>Branch</mat-label>
+                            <input matInput type="text">
+                        </mat-form-field>
+                    </div>
+                    
+                    <div class="col-12">
+                        <mat-form-field appearance="outline" class="w-100">
+                            <mat-label>Description</mat-label>
+                            <textarea matInput cdkTextareaAutosize></textarea>
+                        </mat-form-field>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-flex align-items-center my-20">
+            <p class="my-0 mr-20">Enable Order type based pricing</p>
+            <mat-slide-toggle></mat-slide-toggle>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Price</mat-label>
+                    <input matInput type="text">
+                </mat-form-field>
+            </div>
+            <div class="col-12 col-md-3">
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>taxPercent</mat-label>
+                    <input matInput type="text">
+                </mat-form-field>
+            </div>
+        </div>
+
+        <div class="tabels_tableWrapper mb-40">
+            <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
+                <h3 class="mb-0 font-weight-500">Order type based pricing</h3>
+            </div>
+            <div class="table_outerWrapper">
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100" formArrayName="orderBasedPrice">
+            
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="ordertype">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200">Order Type</th>
+                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i"> {{element.get('orderTypeName').value}} </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="price">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
+                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
+                                <input matInput formControlName="price" type="text">
+                            </mat-form-field>
+                        </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="taxPercent">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tax</th>
+                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
+                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
+                                <input matInput formControlName="taxPercent" type="text">
+                            </mat-form-field>
+                        </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="packagingCharges">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Packaging Charges</th>
+                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
+                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
+                                <input matInput formControlName="packagingCharges" type="text">
+                            </mat-form-field>
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="row align-items-center flex-wrap mb-15">
+            <div class="col-12">
+                <div class="d-flex align-items-center my-10">
+                    <p class="my-0 mr-20">Veg Only</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="d-flex align-items-center my-10">
+                    <p class="my-0 mr-20">Is Active?</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+        </div>
+        
+        <div class="button_wrapper">
+            <button mat-raised-button color="primary" class="mr-20">Add</button>
+            <button mat-raised-button color="warn">Cancel</button>
+        </div>
     </div>
-</div>
+</form>
