--- a/src/app/admin/settings/branches-setting/branches-setting.component.html
+++ b/src/app/admin/settings/branches-setting/branches-setting.component.html
@@ -15,7 +15,7 @@
                 </button>
                     <mat-menu #moreOption="matMenu">
                     <button mat-menu-item type="button" (click)="updateBranch(element)"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
+                    <button mat-menu-item type="button" (click)="deleteBranch(element)"><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
