--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2463,3 +2463,24 @@ label.mat-checkbox-layout {
         }
     }
 }
+
+
+
+.not_loaded {
+    margin: 20px;
+    width: calc(100% - 40px);
+    height: 90px;
+    border-radius: 3px;
+    background-image: linear-gradient(90deg, #e2e2e2 0px, #efefef 30px, #e2e2e2 60px);
+    background-size: calc(160px + 160px);
+    animation: refresh 1.2s infinite ease-out;
+}
+
+@keyframes refresh {
+  0% {
+    background-position: calc(-160px);
+  }
+  60%, 100% {
+    background-position: 160px;
+  }
+}
